--- a/docroot/themes/custom/transac/alshaya_mothercare/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_mothercare/sass/components/header/_header-primary.scss
@@ -7,6 +7,12 @@
       display: inline-flex;
       justify-content: center;
       padding-top: 0.75rem;
+
+      .cart-link {
+        html[lang=ar] & {
+          margin-top: 0;
+        }
+      }
     }
   }
 }
