CORE-30987: Fixed cart icon positioning on AR mobile for PB, PBK and WE.

--- a/docroot/themes/custom/transac/alshaya_pottery_barn_kids/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn_kids/sass/components/header/_header-primary.scss
@@ -109,6 +109,17 @@ header.c-header {
       }
     }
   }
+
+  .block-alshaya-react-mini-cart {
+    .cart-link {
+      @include breakpoint($only-mobile) {
+        html[lang=ar] & {
+          top: 0.125rem;
+          margin-top: 0;
+        }
+      }
+    }
+  }
 }
 
 .c-menu-primary {
