CORE-29857: Apply PLP spec to lozenges for sliders.

--- a/docroot/themes/custom/transac/alshaya_footlocker/sass/components/products/_lozanges-layout.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/sass/components/products/_lozanges-layout.scss
@@ -1,8 +1,29 @@
 .labels-wrapper {
   > .labels-container {
-    .label:not(:only-child) {
+    .label {
+      // Safety for super large images in PLP.
+      // Also default for only one lozenge in PLP and slider.
+      &:only-child {
+        .c-plp &,
+        .view-product-slider & {
+          max-width: 2.375rem;
+        }
+      }
+
       // Safety for super large images.
-      max-width: 2.375rem;
+      // Also default for more than one lozenge.
+      &:not(:only-child) {
+        max-width: 2.375rem;
+
+        // PLP Lozenges (Desktop + Mobile)- Size: 38px each (Added as global max-width for FL).
+        // PDP Lozenges (Desktop) - Size 50px each.
+        // PDP Lozenges (Mobile) - Size 38px each.
+        .c-pdp & {
+          @include breakpoint($tablet) {
+            max-width: 3.125rem;
+          }
+        }
+      }
     }
 
     &.top-left {
@@ -70,17 +91,6 @@
           bottom: 0.625rem;
           #{$right}: 0.625rem;
         }
-      }
-    }
-  }
-
-  .labels-container .label:not(:only-child) {
-    // PLP Lozenges (Desktop + Mobile)- Size: 38px each (Added as global max-width for FL).
-    // PDP Lozenges (Desktop) - Size 50px each.
-    // PDP Lozenges (Mobile) - Size 38px each.
-    .c-pdp & {
-      @include breakpoint($tablet) {
-        max-width: 3.125rem;
       }
     }
   }
