--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-secondary_main_menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/header/_header-secondary_main_menu.scss
@@ -236,7 +236,7 @@
         background: $hfd-menu-background;
 
         .menu__in {
-          right: -0.8rem;
+          #{$left}: -0.8rem;
           margin-top: -2.25rem;
         }
 
