--- a/docroot/themes/custom/transac/alshaya_pottery_barn/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
@@ -20,7 +20,7 @@
     }
 
     @include breakpoint($desktop) {
-      #{$right}: 2.7rem;
+      #{$right}: 0;
     }
   }
 
@@ -116,11 +116,16 @@
 
       &::after {
         @include breakpoint($only-mobile) {
-          top: 0.5rem;
+          width: 2.125rem;
+          height: 2.125rem;
+          background: transparent url('../../../imgs/assets/search.svg') no-repeat;
+          background-position: center;
           #{$right}: unset;
-          #{$left}: 0.25rem;
+          #{$left}: 0.5rem;
           opacity: 1;
           transition: opacity 0.2s;
+          top: 0.9rem;
+          content: '';
         }
 
         @include breakpoint($tablet) {
@@ -132,8 +137,9 @@
           top: 50%;
           transform: translateY(-50%);
           #{$left}: 0;
-          height: 2.1875rem;
-          width: 2.625rem;
+          width: 2.125rem;
+          height: 2.125rem;
+          margin-#{$left}: 0.5rem;
 
           html[lang=ar] & {
             transform: translateY(-52%);
