CORE-31124: Added data-* attributes to the sku base form.

--- a/docroot/modules/custom/alshaya_rcs/templates/rcs-sku-base-form.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/templates/rcs-sku-base-form.html.twig
@@ -1,5 +1,5 @@
 {# @todo Check for condition where add to bag is disabled. #}
-<form class="sku-base-form">
+<form class="sku-base-form" data-sku="#rcs.product._self|data-sku#" data-sku-type="#rcs.product._self|data-sku-type#">
   <div class="js-form-item form-item js-form-type-select form-type-select js-form-item-quantity form-item-quantity">
     <select name="quantity" class="edit-quantity form-select">#rcs.product._self|quantity#</select>
   </div>
