--- a/docroot/modules/custom/alshaya_rcs/templates/rcs-sku-base-form.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/templates/rcs-sku-base-form.html.twig
@@ -1,5 +1,6 @@
 {# @todo Check for condition where add to bag is disabled. #}
 <form class="sku-base-form" data-sku="#rcs.product._self|data-sku#" data-sku-type="#rcs.product._self|data-sku-type#">
+  <div class="errors-container error-container-SKUVAL js-form-wrapper form-wrapper" data-drupal-selector="edit-errors-container" data-msg-required="Please enter your This field." id="edit-errors-container"></div>
   <div class="js-form-item form-item js-form-type-select form-type-select js-form-item-quantity form-item-quantity">
     <select name="quantity" class="edit-quantity form-select">#rcs.product._self|quantity#</select>
   </div>
