CORE-31124: Added span tag surrounding the title.

--- a/docroot/modules/custom/alshaya_rcs/templates/node--rcs-product--full.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/templates/node--rcs-product--full.html.twig
@@ -42,7 +42,7 @@ set classes = [
           {% block productBrand %}
           {% endblock %}
 
-          <h1>#rcs.product.name#</h1>
+          <h1><span>#rcs.product.name#</span></h1>
 
           {% block pricePrefix %}
           {% endblock %}
