--- a/docroot/modules/custom/alshaya_rcs/templates/node--rcs-product--full-magazine.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/templates/node--rcs-product--full-magazine.html.twig
@@ -99,7 +99,7 @@
         {% block productBrand %}
         {% endblock %}
 
-        <h1>#rcs.product.name#</h1>
+        <h1><span>#rcs.product.name#</span></h1>
 
         {% block pricePrefix %}
         {% endblock %}
