CORE-29372: FIxing the AEO image box in mobile for top alignment.

--- a/docroot/themes/custom/transac/alshaya_american_eagle/sass/components/cloudzoom/_cloudzoom.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/sass/components/cloudzoom/_cloudzoom.scss
@@ -149,6 +149,14 @@
     button.slick-arrow {
       display: none !important;
     }
+
+    li.slick-slide {
+      @include breakpoint($only-mobile) {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
   }
 }
 
