--- a/docroot/modules/custom/alshaya_rcs/templates/node--rcs-product--full-magazine.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/templates/node--rcs-product--full-magazine.html.twig
@@ -90,11 +90,7 @@
         {% if quantity_limit_enabled == true %}
           <div class="order-quantity-limit-message mobile-only"></div>
         {% endif %}
-        {% if content.brand_logo %}
-          <div class="brand-logo-wrapper">
-            {{ content.brand_logo }}
-          </div>
-        {% endif %}
+        <div class="brand-logo-wrapper">#rcs.product.brand_logo#</div>
 
         {% block productBrand %}
         {% endblock %}
