--- a/docroot/modules/custom/alshaya_rcs/templates/node--rcs-product--full.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/templates/node--rcs-product--full.html.twig
@@ -33,11 +33,7 @@ set classes = [
     {% block contentSidebar %}
       {% block titleBlock %}
         <div class="content__title_wrapper">
-          {% if content.brand_logo %}
-            <div class="brand-logo-wrapper">
-              {{ content.brand_logo }}
-            </div>
-          {% endif %}
+          <div class="brand-logo-wrapper">#rcs.product.brand_logo#</div>
 
           {% block productBrand %}
           {% endblock %}
