CORE-31124: Added required classes.

--- a/docroot/modules/custom/alshaya_rcs/templates/page--rcs-pdp.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/templates/page--rcs-pdp.html.twig
@@ -94,7 +94,7 @@
   <!-- ______________________ MAIN _______________________ -->
 
   <div class="clearfix page-wrapper">
-    <div{{ attributes.addClass('l-container') }}>
+    <div{{ attributes.addClass(['l-container', 'page-standard', 'overlay__wrapper']) }}>
 
       <main>
 
