CORE-31263: Moved the HFD code to conditional sass.

--- a/docroot/themes/custom/transac/alshaya_westelm/conditional-sass/secondary-menu/component/_secondary-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/conditional-sass/secondary-menu/component/_secondary-menu.scss
@@ -41,3 +41,15 @@
     }
   }
 }
+
+@include breakpoint($upto-desktop) {
+  .main--menu {
+    .secondary--main--menu {
+      ul.menu--one__list {
+        .menu__in {
+          margin-top: -2.25rem;
+        }
+      }
+    }
+  }
+}
