--- a/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-highlights.html.twig
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-highlights.html.twig
@@ -7,11 +7,13 @@
       <div class="title {{ title_class }}">
         {#If its highlight, then only we render the title.#}
       </div>
-      <a href="{{ data.highlight_paragraph.image_link }}">
+      {% if data.highlight_paragraph.imageUrl is not empty %}
+        <a href="{{ data.highlight_paragraph.image_link }}">
         <div class="field field--name-field-highlight-image field--type-image field--label-hidden field__item">
           <img class="b-lazy b-loaded" src="{{ file_url(data.highlight_paragraph.imageUrl) }}">
         </div>
-      </a>
+        </a>
+      {% endif %}
       {% if data.highlight_paragraph.subtitle is not empty %}
         <div class="highlights_subtitle">
           {{ data.highlight_paragraph.subtitle }}
