--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
@@ -83,3 +83,11 @@
     background: $plp-primary-cta-hover-bg;
   }
 }
+
+.is-not-buyable,
+.addtobag-config-button,
+.product-drawer-content-wrapper .pdp-link {
+  &:hover {
+    background: $plp-secondary-cta-hover-bg;
+  }
+}
