--- a/docroot/themes/custom/transac/alshaya_american_eagle/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/sass/config/_colors.scss
@@ -18,6 +18,7 @@ $royal-blue: #385adc;
 $windows-blue: $black;
 $thunderbird: #b91824;
 $boulder-grey: #7c7c7c;
+$_plp_secondary_cta_hover: rgba(0, 0, 0, 0.1);
 
 /* ------- 2. Primary Colors ------- */
 
@@ -674,3 +675,4 @@ $rr-form-head-row-border: $black;
 
 // PLP add to cart.
 $plp-primary-cta-hover-bg: rgba(0, 0, 0, 0.8);
+$plp-secondary-cta-hover-bg: $_plp_secondary_cta_hover;
