--- a/docroot/themes/custom/transac/alshaya_bathbodyworks/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_bathbodyworks/sass/config/_colors.scss
@@ -26,6 +26,7 @@ $error-red: #c00;
 $cerulean-two: #ed088c;
 $icon-bg: rgba(242, 242, 242, 0.3);
 $_plp_cta_hover: #000;
+$_plp_secondary_cta_hover: rgba(51, 51, 51, 0.1);
 
 /* ------- 2. Primary Colors ------- */
 
@@ -639,3 +640,4 @@ $rr-form-head-row-border: $peacock-blue;
 
 // PLP add to cart.
 $plp-primary-cta-hover-bg: $_plp_cta_hover;
+$plp-secondary-cta-hover-bg: $_plp_secondary_cta_hover;
