--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -77,6 +77,7 @@ $black: $hnm-black-three;
 $tropical_green: #007b5f;
 $mariner: #283d5a;
 $sky_blue: #93cdff;
+$_plp_secondary_cta_hover: rgba(34, 34, 34, 0.1);
 
 /* ------- 2. Primary Colors ------- */
 // Global elements.
@@ -781,3 +782,4 @@ $plp-quick-view-product-size-text-disabled: $pdp_swatch_disabled;
 
 // PLP add to cart.
 $plp-primary-cta-hover-bg: $gray44;
+$plp-secondary-cta-hover-bg: $_plp_secondary_cta_hover;
