--- a/docroot/themes/custom/transac/alshaya_pottery_barn/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/sass/config/_colors.scss
@@ -23,6 +23,7 @@ $white-smoke: #f3f3f3;
 $scarlet: #d0011b;
 $tomato: #e6591a;
 $medium-green: #3ab549;
+$_plp_secondary_cta_hover: rgba(51, 51, 51, 0.1);
 
 // Colors for which variables are not present in Zeplin but colors are used.
 $_black_two: #333;
@@ -620,3 +621,4 @@ $spc-cart-free-gifts-link: $PB_grey_one;
 
 // PLP add to cart.
 $plp-primary-cta-hover-bg: $PB_black_one;
+$plp-secondary-cta-hover-bg: $_plp_secondary_cta_hover;
