--- a/docroot/themes/custom/transac/alshaya_westelm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/sass/config/_colors.scss
@@ -35,6 +35,7 @@ $WE_deep_blue: #4285f4;
 $WE_light_blue: #e0eaf2;
 $roman_coffee: #81644b;
 $_we_gray_one: #666;
+$_plp_secondary_cta_hover: rgba(51, 51, 51, 0.1);
 
 // Overrides for variables.
 // Global elements.
@@ -647,3 +648,4 @@ $algolia-search-clear-text-icon: $WE_grey_three;
 
 // PLP add to cart.
 $plp-primary-cta-hover-bg: $WE_black_one;
+$plp-secondary-cta-hover-bg: $_plp_secondary_cta_hover;
