--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -157,6 +157,7 @@ $blueberri_boy: #0078ff;
 $_plp-add-to-cart-disabled-qty: #aeaeb2;
 $_smart_agent_banner: rgb(12, 161, 77);
 $_plp_cta_hover: #e85d17;
+$_plp_secondary_cta_hover: rgba(255, 109, 34, 0.1);
 
 /* ------- 2. Primary Colors ------- */
 // Global elements.
@@ -1700,6 +1701,7 @@ $plp-disabled-qty-bg: $_plp-add-to-cart-disabled-qty;
 $plp-hover-slider-dot-color: $_gray;
 $plp-hover-slider-dot-container-bg-color: $white-five;
 $plp-primary-cta-hover-bg: $_plp_cta_hover;
+$plp-secondary-cta-hover-bg: $_plp_secondary_cta_hover;
 
 // PLP Quick view drawer.
 $plp-quick-view-background: $white-five;
