CORE-31262: HFD menu theming fixes on mobile and tablet.

--- a/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-level1.html.twig
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/templates/alshaya-secondary-main-menu-level1.html.twig
@@ -1,5 +1,5 @@
 <div class="secondary--main--menu" style="display: none">
-  <ul class="menu__list menu--one__list">
+  <ul class="menu__list menu--one__list secondary--main--menu__list">
     <div class="menu-backdrop"></div>
     {% if (menu_type == 'default') %}
       {% for key1, level1menu in column_tree %}
