CORE-30777: Arabic font fixed for WE.

--- a/docroot/themes/custom/transac/alshaya_westelm/sass/config/_fonts.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/sass/config/_fonts.scss
@@ -89,8 +89,8 @@ $we-bold-nodir: 'GTEestiDisplay-Medium', 'GEDinarTwoMedium', 'Arial';
 $we-thin: 'GTEestiDisplay-Light', 'GEDinarOneMedium', 'Arial';
 $we-thin-nodir: 'GTEestiDisplay-Light', 'GEDinarOneMedium', 'Arial';
 
-$we-arabic-bold: 'GEDinarTwoMedium', 'GTEestiDisplay-Medium', 'Arial';
-$we-arabic-bold-nodir: 'GEDinarTwoMedium', 'GTEestiDisplay-Medium', 'Arial';
+$we-arabic-bold: 'GTEestiDisplay-Medium', 'GEDinarTwoMedium', 'Arial';
+$we-arabic-bold-nodir: 'GTEestiDisplay-Medium', 'GEDinarTwoMedium', 'Arial';
 
 $we-arabic-thin: 'GTEestiDisplay-Light', 'GEDinarOneMedium', 'Arial';
 $we-arabic-thin-nodir: 'GTEestiDisplay-Light', 'GEDinarOneMedium', 'Arial';
