--- a/docroot/themes/custom/transac/alshaya_bathbodyworks/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_bathbodyworks/sass/config/_colors.scss
@@ -27,6 +27,7 @@ $cerulean-two: #ed088c;
 $icon-bg: rgba(242, 242, 242, 0.3);
 $_plp_cta_hover: #000;
 $_plp_secondary_cta_hover: rgba(51, 51, 51, 0.1);
+$ripe-lemon: #f0d51f;
 
 /* ------- 2. Primary Colors ------- */
 
@@ -615,7 +616,7 @@ $spc-cart-free-gifts-link: $black;
 
 // Review and Rating
 
-$rr-histogram-dynamic-bar-bg: $peacock-blue;
+$rr-histogram-dynamic-bar-bg: $ripe-lemon;
 $rr-recommendation-icon-bg: $peacock-blue;
 $rr-tag-label-active-bg: $peacock-blue;
 $rr-tag-label-active-border: $peacock-blue;
@@ -635,7 +636,7 @@ $rr-review-summary-btn-color: $black;
 $rr-review-form-title: $black;
 $rr-review-comment-label: $warm-grey-one;
 $rr-write-review-link-txt: $black;
-$rr-stars-color: $peacock-blue;
+$rr-stars-color: $ripe-lemon;
 $rr-form-head-row-border: $peacock-blue;
 
 // PLP add to cart.
