--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/secondary-menu/component/_secondary-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/secondary-menu/component/_secondary-menu.scss
@@ -61,7 +61,7 @@
             .highlights {
               margin-bottom: 1.875rem;
               margin-#{$right}: 0;
-              max-width: 15.812rem;
+              max-width: 17.6875rem;
               font-family: $open-sans;
 
               a {
@@ -72,9 +72,13 @@
                 }
               }
 
+              .highlighted {
+                margin-#{$right}: 1.875rem;
+              }
+
               img {
-                width: 15.812rem;
-                height: 15.812rem;
+                width: 15.813rem;
+                height: 15.813rem;
               }
 
               &_subtitle {
@@ -82,6 +86,7 @@
                 font-size: 0.875rem;
                 color: $hfd-menu-link-color;
                 font-family: $open-sans;
+                font-weight: normal;
               }
 
               &_title {
@@ -91,6 +96,8 @@
                 line-height: 1.13;
                 letter-spacing: 0.75px;
                 color: $hfd-menu-heighlight-title;
+                text-transform: uppercase;
+                text-decoration: underline;
               }
             }
 
