CORE-31418: Secondary menu l2 menu item theming fixes on desktop.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/secondary-menu/component/_secondary-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/secondary-menu/component/_secondary-menu.scss
@@ -111,6 +111,15 @@
                 line-height: 1.125rem;
                 display: inline-block;
               }
+
+              .menu--two__list-item {
+                > div a {
+                  white-space: nowrap;
+                  overflow: hidden;
+                  text-overflow: ellipsis;
+                  display: block;
+                }
+              }
             }
 
             &-item {
