--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/secondary-menu/component/_secondary-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/secondary-menu/component/_secondary-menu.scss
@@ -70,6 +70,14 @@
                     text-decoration: underline;
                   }
                 }
+
+                > div.field--name-field-highlight-image {
+                  width: 15.813rem;
+                  height: 15.813rem;
+                  display: inline-flex;
+                  justify-content: center;
+                  align-items: center;
+                }
               }
 
               .highlighted {
@@ -77,8 +85,10 @@
               }
 
               img {
-                width: 15.813rem;
-                height: 15.813rem;
+                width: auto;
+                height: auto;
+                max-width: 100%;
+                max-height: 100%;
               }
 
               &_subtitle {
@@ -97,7 +107,6 @@
                 letter-spacing: 0.75px;
                 color: $hfd-menu-heighlight-title;
                 text-transform: uppercase;
-                text-decoration: underline;
               }
             }
 
