CORE-31015: HFD menu level1 menu item height fixed.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/secondary-menu/component/_secondary-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/secondary-menu/component/_secondary-menu.scss
@@ -30,7 +30,7 @@
 
       li.menu--one {
         &__list-item {
-          height: 1.25rem;
+          height: auto;
           min-width: 0;
 
           > .menu__link-wrapper {
