CORE-31418: Secondary menu theming fixes and title added for L2 level.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/secondary-menu/component/_secondary-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/secondary-menu/component/_secondary-menu.scss
@@ -134,7 +134,7 @@
           &.wrap-link-text {
             min-width: 0;
 
-            .menu__link-wrapper {
+            > div.menu__link-wrapper {
               max-width: 6rem;
             }
 
@@ -181,7 +181,7 @@
           &:hover {
             .menu--one__link {
               padding-top: 0.125rem;
-              padding-bottom: 1px;
+              padding-bottom: 0.0625rem;
               border-top: 0;
               border-bottom: 1px solid $hfd-menu-link-color-hover;
               cursor: pointer;
