CORE-26761: Adding location filter in review and manage it via backend config.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_write-review-form-field.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/bazaar-voice/component/_write-review-form-field.scss
@@ -110,6 +110,12 @@
     }
   }
 
+  .hide-field-select {
+    &.dropdown-conatiner {
+      display: none;
+    }
+  }
+
   .dropdown-conatiner {
     display: flex;
     align-items: center;
