--- a/docroot/themes/custom/transac/alshaya_the_body_shop/templates/email/mimemail-message.html.twig
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/templates/email/mimemail-message.html.twig
@@ -26,7 +26,7 @@
   </head>
   <body id="mimemail-body" class="{{ lang }}" {% if ( module | length > 0 ) and ( key | length > 0 ) %}  {% set class = 'class="' ~ module ~ '-' ~ key ~ '"' %} {% endif %} >
     <div id="header" style="text-align: center; background: #fff;">
-      <img src="{{ email_logo }}" style="max-width: 55px;" width="100%" alt="logo" title="logo"/>
+      <img src="{{ email_logo }}?1an5t8" style="width: 200px;" width="100%" alt="logo" title="logo"/>
     </div>
     <div id="center">
       <div id="main">
