--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/products/_products-list.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/products/_products-list.scss
@@ -192,8 +192,7 @@
       position: relative;
 
       .alshaya_search_mainimage {
-        height: 100%;
-        opacity: 1;
+        height: auto;
       }
     }
 
@@ -373,10 +372,6 @@
   opacity: 0;
   transition: opacity 0.2s ease-out;
   width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  background-color: $default_background_color;
 }
 
 .block-views-blockproduct-category-level-3-block-2 {
