--- a/docroot/themes/custom/transac/alshaya_mothercare/sass/config/_fonts.scss
+++ b/docroot/themes/custom/transac/alshaya_mothercare/sass/config/_fonts.scss
@@ -40,3 +40,23 @@ $base_theme_fonts_directory_path: '/themes/custom/transac/alshaya_mothercare/fon
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Cairo-Regular";
+  src:
+    url("#{$base_theme_fonts_directory_path}/Cairo-Regular.woff2") format("woff2"),
+    url("#{$base_theme_fonts_directory_path}/Cairo-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Cairo-SemiBold";
+  src:
+    url("#{$base_theme_fonts_directory_path}/Cairo-SemiBold.woff2") format("woff2"),
+    url("#{$base_theme_fonts_directory_path}/Cairo-SemiBold.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
