[6.0.4]CORE-30761:BV - Back arrow for Write Review in New PDP

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-ratings-reviews.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-ratings-reviews.scss
@@ -503,16 +503,19 @@ body.ratings-reviews-overlay {
                 z-index: 3;
                 background: none;
                 top: 0.5rem;
-                #{$right}: 0.625rem;
+                #{$right}: auto;
+                #{$left}: 0;
 
                 html[lang=ar] & {
                   top: 0.3125rem;
-                  left: 0.8125rem;
                 }
 
-                &::before {
+                @include icon(chevron#{$left}, before) {
                   color: $magv2-panel-close-icon;
                   font-size: 2.5rem;
+                  width: 2rem;
+                  cursor: pointer;
+                  pointer-events: none;
                 }
               }
 
