CORE-30269: Fixed HM and BBW fonts for SPC cart login page and also updated HM Arabic fonts.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_fonts.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_fonts.scss
@@ -156,14 +156,14 @@ $hnmpromo-regular-nodir: 'HM Serif Regular', 'Times New Roman', 'Arial';
 
 // Arabic fonts.
 // Adding En fonts so browser prints English characters & numbers correctly in arabic.
-$hnm-arabic-bold: 'HM Sans Bold', 'HM Sans Arabic Bold', 'sans-serif', 'Arial';
-$hnm-arabic-bold-nodir: 'HM Sans Bold', 'HM Sans Arabic Bold', 'sans-serif', 'Arial';
+$hnm-arabic-bold: 'HM Sans Arabic Bold', 'HM Sans Bold', 'sans-serif', 'Arial';
+$hnm-arabic-bold-nodir: 'HM Sans Arabic Bold', 'HM Sans Bold', 'sans-serif', 'Arial';
 
-$hnm-arabic-medium: 'HM Sans Semi Bold', 'HM Sans Arabic Semi Bold', 'sans-serif', 'Arial';
-$hnm-arabic-medium-nodir: 'HM Sans Semi Bold', 'HM Sans Arabic Semi Bold', 'sans-serif', 'Arial';
+$hnm-arabic-medium: 'HM Sans Arabic Semi Bold', 'HM Sans Semi Bold', 'sans-serif', 'Arial';
+$hnm-arabic-medium-nodir: 'HM Sans Arabic Semi Bold', 'HM Sans Semi Bold', 'sans-serif', 'Arial';
 
-$hnm-arabic-regular: 'HM Sans Regular', 'HM Sans Arabic Regular', 'sans-serif', 'Arial';
-$hnm-arabic-regular-nodir: 'HM Sans Regular', 'HM Sans Arabic Regular', 'sans-serif', 'Arial';
+$hnm-arabic-regular: 'HM Sans Arabic Regular', 'HM Sans Regular', 'sans-serif', 'Arial';
+$hnm-arabic-regular-nodir: 'HM Sans Arabic Regular', 'HM Sans Regular', 'sans-serif', 'Arial';
 
 $hnmpromo-arabic-regular: 'HM Serif Regular', 'Times New Roman', 'Arial';
 $hnmpromo-arabic-regular-nodir: 'HM Serif Regular', 'Times New Roman', 'Arial';
