--- a/docroot/themes/custom/transac/alshaya_westelm/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/sass/components/header/_header-primary.scss
@@ -130,6 +130,7 @@ header {
 
         @include breakpoint($desktop) {
           max-width: 12.5rem;
+          display: inline;
         }
 
         @include breakpoint($only-tablet) {
@@ -209,6 +210,12 @@ header {
         > div {
           @include breakpoint($desktop) {
             width: 33.33%;
+          }
+        }
+
+        > .block-system-branding-block {
+          @include breakpoint($desktop) {
+            width: 100%;
           }
         }
       }
