CORE-31622: Updated styling to centre align Boots PDP images.

--- a/docroot/themes/custom/transac/alshaya_boots/sass/components/cloudzoom/_cloudzoom.scss
+++ b/docroot/themes/custom/transac/alshaya_boots/sass/components/cloudzoom/_cloudzoom.scss
@@ -110,3 +110,15 @@
     }
   }
 }
+
+.mobilegallery {
+  #product-image-gallery-mobile {
+    li.slick-slide {
+      @include breakpoint($only-mobile) {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+  }
+}
