--- a/docroot/themes/custom/transac/alshaya_pottery_barn_kids/conditional-sass/smart-agent/smart-agent.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn_kids/conditional-sass/smart-agent/smart-agent.scss
@@ -1,4 +1,5 @@
 @import '../../sass/brand-feature-override';
 @import '../../../alshaya_white_label/conditional-sass/smart-agent/component/**/*';
+@import '../../../alshaya_pottery_barn/conditional-sass/smart-agent/component/**/*';
 @import "component/**/*";
 
