--- a/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/spc-cart/component/_spc-recommended-products.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/spc-cart/component/_spc-recommended-products.scss
@@ -12,11 +12,13 @@
 
   .block-content {
     .spc-product-recommended-wrapper {
-      width: 13.25rem;
+      width: 14.375rem;
       margin-bottom: 1.875rem;
+      min-width: 14.375rem;
+      max-width: none;
 
       .spc-product-recommended-image {
-        width: 13.25rem;
+        width: 100%;
         margin-bottom: 1.4375rem;
         height: 18.8125rem;
 
