CORE-31222: Fixed tom and bottom spacing of HFD for AR.

--- a/docroot/themes/custom/transac/alshaya_westelm/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/sass/components/header/_header-primary.scss
@@ -1,4 +1,8 @@
 header {
+  @include breakpoint($desktop) {
+    border-bottom: 0.0625rem solid $mm_l1_border;
+  }
+
   &.c-header {
     .block-views-exposed-filter-blocksearch-page {
       .form-text {
